Add basic styling

--- a/assets/style/_container.scss
+++ b/assets/style/_container.scss
@@ -1,8 +1,12 @@
 .container {
   margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // text-align: center;
   padding: 0 20px;
+  min-height: 100vh;
+  max-width: 1200px;
+  margin: 0 auto;
+  background: white;
 }
