--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,5 +1,6 @@
 @import 'colors';
 @import 'breakpoints';
+@import 'headings';
 @import 'container';
 @import 'section';
 
@@ -34,3 +35,20 @@ hr {
   box-sizing: border-box;
   margin: 0;
 }
+
+.box {
+  background-color: white;
+  // box-shadow: 0 6px 24px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  height: 15em;
+  padding: 2em 1em;
+}
+
+a {
+  color: #fc7978;
+  text-decoration: none;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+
