Add features section

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -46,7 +46,7 @@ hr {
 }
 
 a {
-  color: #fc7978;
+  color: var(--link-color);
   text-decoration: none;
   font-weight: 600;
   letter-spacing: 0.5px;
